# antgame-fresh

./: CLAUDE.md  client.py  core.py  draw.py  game.py  game_lifecycle.py  knowledge.py  logbook.py  main.py  mechanics.py  perlin.py  planning.py  pyproject.toml  serialization.py  server.py  test_crash.py  test_utils.py  ui.py
.github/workflows/: ci.yml
tests/: test_core.py  test_knowledge.py  test_mechanics.py  test_multiplayer.py
