[project]
name = "antgame-fresh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "numpy>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.13.0",
    "ipython>=9.8.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
