[project]
name = "antgame-fresh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "numpy>=2.4.0",
    "pygame-gui>=0.6.14",
    "flask>=3.1.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.13.0",
    "ipython>=9.8.0",
    "types-requests>=2.32.4.20250913",
    "types-flask>=1.1.6",
    "responses>=0.25.8",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requiring real server, slower)",
]
