[project]
name = "antgame-fresh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "numpy>=2.4.0",
    "pygame-gui>=0.6.14",
    "requests>=2.32.5",
    "aiohttp>=3.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.13.0",
    "ipython>=9.8.0",
    "types-requests>=2.32.4.20250913",
    "responses>=0.25.8",
    "pytest-asyncio>=1.3.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (requiring real server, slower)",
]
